# consult-snapfile

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh
.github/workflows/: release.yml  test.yml
emacs/: consult-snapfile-history.el  consult-snapfile-server.el  consult-snapfile.el
emacs/tests/: consult-snapfile.el  history.el  integration.el  reconnect.el
src/: fd.rs  main.rs  matcher.rs  protocol.rs  search.rs  server.rs  watcher.rs
tests/: integration.rs
