[package]
name = "consult-snapfile-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "consult-snapfile-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nucleo-matcher = "0.3"
ignore = "0.4"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
anyhow = "1.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
